# ejson_cpp

./: .clang-format  .travis.yml  CMakeLists.txt  Makefile  README.md
cmake/: CXXFlags.cmake  CodeCov.cmake  Conan.cmake
ejson/: CMakeLists.txt  main.cpp
include/ejson/: ejson.h
src/: CMakeLists.txt  ejson.cpp
tests/: CMakeLists.txt  test_truth.cpp
